Wed Jul 18 15:59:03 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/config-tru64.h:

          Removed _LIBC_POLLUTION_H. It seems that this macro is causing
          problems for some users.

Tue Jul 17 13:00:11 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/run_test.lst: Enabled the MEM_Stream test on Linux.

Mon Jul 16 14:59:32 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Log_Msg_UNIX_Syslog.cpp (open): Add an ACE_const_cast()
	  to the program name for platforms like LynxOS whose openlog()
 	  method is char * rather than const char *.  Thanks to Bala for
 	  reporting this.

Sun Jul 15 11:06:33 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Log_Msg_NT_Event_Log.cpp: Fixed the implementation so that
	  it's consistent with the new program_name() features.  Thanks to
 	  Chris Kohloff <chris@kohlhoff.com> for this fix.

Sun Jul 15 11:04:26 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/SSL/ACE_SSL.dsp:
          Removed references to $OPENSSL_ROOT, the user should configure
          those in the Tools -> Option -> Directories tab.

Fri Jul 13 23:02:46 2001  Ossama Othman  <ossama@uci.edu>

        * ace/SSL/SSL_Asynch_Stream.h:
        * ace/SSL/SSL_Asynch_Stream.cpp:
        * ace/SSL/SSL_Asynch_BIO.h:
        * ace/SSL/SSL_Asynch_BIO.cpp:

          Only support asynchronous SSL streams when using OpenSSL >
          0.9.5a.  The BIO method signatures changed in OpenSSL 0.9.6.

Fri Jul 13 22:48:56 2001  Ossama Othman  <ossama@uci.edu>

        * ace/SSL/SSL_Asynch_BIO.cpp (methods_ACE):

          Removed excess element in aggregate initializer.

Fri Jul 13 22:29:01 2001  Ossama Othman  <ossama@uci.edu>

        * ace/SSL/SSL_Asynch_Stream.cpp (print_error):

          The OpenSSL ERR_error_string_n() function is only supported in
          OpenSSL 0.9.6 or better.

Fri Jul 13 14:59:18 2001  Alexander Libman <alexander.libman@baltimore.com>

        * ace/WIN32_Asynch_IO.h (ACE_WIN32_Asynch_Result):